--- a/Main.ipynb
+++ b/Main.ipynb
@@ -32,25 +32,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# from keras.layers import \n",
     "import numpy as np\n",
-    "from keras import layers\n",
-    "from keras.layers import Input, merge,UpSampling2D, Add, Dense, Activation, ZeroPadding2D, BatchNormalization, Flatten, Conv2D, AveragePooling2D, MaxPooling2D, GlobalMaxPooling2D\n",
-    "from keras.models import Model, load_model\n",
-    "from keras.preprocessing import image\n",
-    "from keras.utils import layer_utils\n",
-    "from keras.utils.data_utils import get_file\n",
-    "from keras.applications.imagenet_utils import preprocess_input\n",
+    "\n",
+    "from keras.models import *\n",
+    "from keras.layers import *\n",
+    "from keras.optimizers import *\n",
+    "from keras.callbacks import ModelCheckpoint, LearningRateScheduler\n",
+    "from keras import backend as keras\n",
+    "\n",
+    "\n",
+    "# from keras import layers\n",
+    "# from keras.layers import Input, merge,UpSampling2D, Add, Dense, Activation, ZeroPadding2D, BatchNormalization, Flatten, Conv2D, AveragePooling2D, MaxPooling2D, GlobalMaxPooling2D\n",
+    "# from keras.models import Model, load_model\n",
+    "# from keras.preprocessing import image\n",
+    "# from keras.utils import layer_utils\n",
+    "# from keras.utils.data_utils import get_file\n",
+    "# from keras.applications.imagenet_utils import preprocess_input\n",
     "import pydot\n",
     "from IPython.display import SVG\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "from keras.utils import plot_model\n",
+    "# from keras.utils.vis_utils import model_to_dot\n",
+    "# from keras.utils import plot_model\n",
     "# from resnets_utils import *\n",
-    "from keras.initializers import glorot_uniform\n",
+    "# from keras.initializers import glorot_uniform\n",
     "import scipy.misc\n",
     "from matplotlib.pyplot import imshow\n",
     "\n",
@@ -65,17 +73,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_dataset():\n",
+    "    X_train_orig = []\n",
+    "    Y_train_orig = []\n",
+    "    X_test_orig = []\n",
+    "    Y_test_orig = []\n",
+    "    classes = []\n",
+    "    return X_train_orig, Y_train_orig, X_test_orig, Y_test_orig, classes"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train_orig, Y_train_orig, X_test_orig, Y_test_orig, classes = load_dataset()\n",
+    "\n",
+    "# Normalize image vectors\n",
+    "X_train = X_train_orig/255.\n",
+    "X_test = X_test_orig/255.\n",
+    "\n",
+    "# Reshape\n",
+    "Y_train = Y_train_orig.T\n",
+    "Y_test = Y_test_orig.T\n",
+    "\n",
+    "print (\"number of training examples = \" + str(X_train.shape[0]))\n",
+    "print (\"number of test examples = \" + str(X_test.shape[0]))\n",
+    "print (\"X_train shape: \" + str(X_train.shape))\n",
+    "print (\"Y_train shape: \" + str(Y_train.shape))\n",
+    "print (\"X_test shape: \" + str(X_test.shape))\n",
+    "print (\"Y_test shape: \" + str(Y_test.shape))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def double_convolutional( X, f, stage, block):\n",
+    "def double_convolutional( X, f, stage):\n",
     "    \"\"\"\n",
     "    Implementation of the convolutional block\n",
     "    \n",
@@ -103,7 +136,7 @@
     "    Returns:\n",
     "    X -- output of the convolutional block, tensor of shape (n_H, n_W, n_C)\n",
     "    \"\"\"\n",
-    "    \n",
+    "    block = \"0\"\n",
     "    # defining name basis\n",
     "    conv_name_base = 'res' + str(stage) + block + '_branch'\n",
     "    bn_name_base = 'bn' + str(stage) + block + '_branch'\n",
@@ -125,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +197,9 @@
     "\n",
     "    X = UpSampling2D(size = (2,2))(X)\n",
     "\n",
-    "    X = Conv2D(f, (3,3), strides = (1,1), padding = 'same', name = 'res6', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Conv2D(512, (2,2), strides = (1,1), padding = 'same', name = 'res6', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "\n",
-    "    X = merge([X4,X], mode = 'concat', concat_axis = 3)\n",
+    "    X = concatenate([X4,X], axis = 3)\n",
     "\n",
     "    X = double_convolutional( X, 512, 7)\n",
     "\n",
@@ -174,33 +207,125 @@
     "\n",
     "\n",
     "\n",
-    "    X = Conv2D(f, (3,3), strides = (1,1), padding = 'same', name = 'res7', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Conv2D(256, (2,2), strides = (1,1), padding = 'same', name = 'res7', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "\n",
-    "    X = merge([X3,X], mode = 'concat', concat_axis = 3)\n",
+    "    X = concatenate([X3,X], axis = 3)\n",
     "\n",
     "    X = double_convolutional( X, 256, 8)\n",
     "\n",
     "    X = UpSampling2D(size = (2,2))(X)\n",
     "\n",
     "\n",
-    "    X = Conv2D(f, (3,3), strides = (1,1), padding = 'same', name = 'res8', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Conv2D(128, (2,2), strides = (1,1), padding = 'same', name = 'res8', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "\n",
-    "    X = merge([X2,X], mode = 'concat', concat_axis = 3)\n",
+    "    X = concatenate([X2,X], axis = 3)\n",
     "\n",
     "    X = double_convolutional( X, 128, 9)\n",
     "\n",
     "    X = UpSampling2D(size = (2,2))(X)\n",
     "\n",
-    "    X = Conv2D(f, (3,3), strides = (1,1), padding = 'same', name = 'res9', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Conv2D(64, (2,2), strides = (1,1), padding = 'same', name = 'res9', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "\n",
-    "    X = merge([X1,X], mode = 'concat', concat_axis = 3)\n",
+    "    X = concatenate([X1,X], axis = 3)\n",
     "\n",
     "    X = double_convolutional( X, 64, 9)\n",
     "\n",
     "    \n",
-    "    X = Conv2D(f, (1,1), strides = (1,1), padding = 'same', name = 'res10', kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Conv2D(1, (1,1), strides = (1,1), padding = 'same', name = 'res10', kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "\n",
     "    return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train.shape[1:]\n",
+    "model = unetModel([580,420,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(x=X_train,y=Y_train,epochs=40,batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = model.evaluate(x=X_test,y=Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print()\n",
+    "print (\"Loss = \" + str(preds[0]))\n",
+    "print (\"Test Accuracy = \" + str(preds[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_path = 'images/my_image.jpg'\n",
+    "### END CODE HERE ###\n",
+    "img = image.load_img(img_path, target_size=(64, 64))\n",
+    "imshow(img)\n",
+    "\n",
+    "x = image.img_to_array(img)\n",
+    "x = np.expand_dims(x, axis=0)\n",
+    "x = preprocess_input(x)\n",
+    "\n",
+    "print(model.predict(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "happyModel.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(happyModel, to_file='unetModel.png')\n",
+    "SVG(model_to_dot(happyModel).create(prog='dot', format='svg'))"
    ]
   },
   {
